WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74766
Fix typo in MarkupTokenBase: rename takeAtributes to takeAttributes
https://bugs.webkit.org/show_bug.cgi?id=74766
Summary
Fix typo in MarkupTokenBase: rename takeAtributes to takeAttributes
Adam Klein
Reported
2011-12-16 16:19:22 PST
Fix typo in MarkupTokenBase: rename takeAtributes to takeAttributes
Attachments
Patch
(4.75 KB, patch)
2011-12-16 16:19 PST
,
Adam Klein
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Klein
Comment 1
2011-12-16 16:19:39 PST
Created
attachment 119695
[details]
Patch
WebKit Review Bot
Comment 2
2011-12-16 18:04:47 PST
Comment on
attachment 119695
[details]
Patch Clearing flags on attachment: 119695 Committed
r103134
: <
http://trac.webkit.org/changeset/103134
>
WebKit Review Bot
Comment 3
2011-12-16 18:04:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug