Fix typo in MarkupTokenBase: rename takeAtributes to takeAttributes https://bugs.webkit.org/show_bug.cgi?id=74766

Reviewed by Darin Adler.

* html/parser/HTMLConstructionSite.cpp:
(WebCore::HTMLConstructionSite::insertHTMLHtmlStartTagBeforeHTML):
(WebCore::HTMLConstructionSite::insertScriptElement):
(WebCore::HTMLConstructionSite::createElement):
(WebCore::HTMLConstructionSite::createHTMLElement):
* html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::attributesForIsindexInput):
* xml/parser/MarkupTokenBase.h:
(WebCore::AtomicMarkupTokenBase::takeAttributes):


git-svn-id: svn://svn.chromium.org/blink/trunk@103134 bbb929c8-8fbe-4397-9dbb-9b2b20218538