third_party/WebKit/Source/WebCore/xml/parser/MarkupTokenBase.h
@@ -453,7 +453,7 @@ public:
         return m_attributes.get();
     }
 
-    PassRefPtr<NamedNodeMap> takeAtributes()
+    PassRefPtr<NamedNodeMap> takeAttributes()
     {
         ASSERT(usesAttributes());
         return m_attributes.release();
